css center alignment fix

--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 #auto-wrapper {
     position: relative;
+    float: none;
 }
 
 .suggestion-item {
